--- a/src/shared/components/w-media-selection/w-media-selection.component.scss
+++ b/src/shared/components/w-media-selection/w-media-selection.component.scss
@@ -58,3 +58,8 @@
     }
   }
 }
+
+.btn-group-filter {
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
